# gen_ai_unified_agentic_concierge

./: .env  .env.example  README.md  debug_script.py  docker-compose.yml  list_models.py  pyproject.toml  test_client.py  test_llm.py
agents/: booking.py  concierge.py  discovery.py  preference.py  reflection.py
connectors/resy/: server.py
connectors/rooam/: server.py
connectors/tock/: server.py
docs/: architecture.md
events/: kafka_consumer.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
orchestration/: graph.py
schemas/: models.py  state.py
services/api_gateway/: main.py
